# magicstates

./: .gitignore  README.md  pyproject.toml  requirements.txt  two_level_15to1_simulations.csv
Docs/report-ciaran-neely-2024-02-02/: report.tex
Python/: __init__.py  definitions.py  factory.py  magic_state_factory.py  magicstates.ipynb  main.py  onelevel15to1.py  plot_two_level_15to1.py  smallfootprint.py  test.py  test_kron.py  twolevel15to1.py  twolevel20to4.py  twolevel8toCCZ.py
